--- a/PYTHON_II_GP-master/Group5_Notebook_Assignment2.ipynb
+++ b/PYTHON_II_GP-master/Group5_Notebook_Assignment2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c09084531061d983",
    "metadata": {
     "ExecuteTime": {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f456cffd-2d57-41ab-9809-b6da5f579bd1",
    "metadata": {
     "ExecuteTime": {
@@ -85,7 +85,7 @@
        "(17379, 17)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,6 +94,13 @@
     "df = pd.read_csv('data/bike-sharing-hourly.csv')\n",
     "df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -188637,15 +188644,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0e28f056-2c4d-4281-b6da-db24627d46e8",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2023-11-09T11:47:29.055388400Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'initial_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\vanev\\OneDrive - IE University\\Second Term\\Python\\Group Assignment\\PYTHON_II_GP\\PYTHON_II_GP-master\\Group5_Notebook_Assignment2.ipynb Cell 70\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vanev/OneDrive%20-%20IE%20University/Second%20Term/Python/Group%20Assignment/PYTHON_II_GP/PYTHON_II_GP-master/Group5_Notebook_Assignment2.ipynb#Y126sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m initial_dataset\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'initial_dataset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "initial_dataset.head()"
+   ]
   },
   {
    "cell_type": "markdown",
