--- a/model.ipynb
+++ b/model.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
+    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-04T10:07:40.565078Z",
-     "start_time": "2023-11-04T10:07:39.324211400Z"
-    },
-    "collapsed": true
+     "end_time": "2023-11-14T20:22:49.079408900Z",
+     "start_time": "2023-11-14T20:22:45.387949100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -33,214 +33,17 @@
    "execution_count": 2,
    "id": "fba9b615e4a06ce1",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T10:08:12.556435700Z",
-     "start_time": "2023-11-04T10:08:12.298685500Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-14T20:22:49.119283300Z",
+     "start_time": "2023-11-14T20:22:49.080412100Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hum_quantized</th>\n",
-       "      <th>dteday</th>\n",
-       "      <th>temp_quantized</th>\n",
-       "      <th>hum_binarized</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>casual</th>\n",
-       "      <th>atemp</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>instant</th>\n",
-       "      <th>week_of_year</th>\n",
-       "      <th>...</th>\n",
-       "      <th>weekday_1</th>\n",
-       "      <th>weekday_2</th>\n",
-       "      <th>weekday_3</th>\n",
-       "      <th>weekday_4</th>\n",
-       "      <th>weekday_5</th>\n",
-       "      <th>weekday_6</th>\n",
-       "      <th>workingday_1</th>\n",
-       "      <th>weathersit_2</th>\n",
-       "      <th>weathersit_3</th>\n",
-       "      <th>weathersit_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>1</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.2727</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>2</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.2727</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>3</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>4</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.4925</td>\n",
-       "      <td>5</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 73 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   hum_quantized     dteday  temp_quantized  hum_binarized  quarter  casual  \\\n",
-       "0            0.0 2011-01-01             0.0            0.0        1       3   \n",
-       "1            0.0 2011-01-01             0.0            0.0        1       8   \n",
-       "2            0.0 2011-01-01             0.0            0.0        1       5   \n",
-       "3            0.0 2011-01-01             0.0            0.0        1       3   \n",
-       "4            0.0 2011-01-01             0.0            0.0        1       0   \n",
-       "\n",
-       "    atemp  windspeed  instant  week_of_year  ...  weekday_1  weekday_2  \\\n",
-       "0  0.2879     0.4925        1            52  ...        0.0        0.0   \n",
-       "1  0.2727     0.4925        2            52  ...        0.0        0.0   \n",
-       "2  0.2727     0.4925        3            52  ...        0.0        0.0   \n",
-       "3  0.2879     0.4925        4            52  ...        0.0        0.0   \n",
-       "4  0.2879     0.4925        5            52  ...        0.0        0.0   \n",
-       "\n",
-       "   weekday_3  weekday_4  weekday_5  weekday_6  workingday_1  weathersit_2  \\\n",
-       "0        0.0        0.0        0.0        1.0           0.0           0.0   \n",
-       "1        0.0        0.0        0.0        1.0           0.0           0.0   \n",
-       "2        0.0        0.0        0.0        1.0           0.0           0.0   \n",
-       "3        0.0        0.0        0.0        1.0           0.0           0.0   \n",
-       "4        0.0        0.0        0.0        1.0           0.0           0.0   \n",
-       "\n",
-       "   weathersit_3  weathersit_4  \n",
-       "0           0.0           0.0  \n",
-       "1           0.0           0.0  \n",
-       "2           0.0           0.0  \n",
-       "3           0.0           0.0  \n",
-       "4           0.0           0.0  \n",
-       "\n",
-       "[5 rows x 73 columns]"
-      ]
+      "text/plain": "   aux_actual_atemp  registered  temp_binarized  temp_quantized  temp  \\\n0            14.395          13             0.0             0.0  0.24   \n1            13.635          32             0.0             0.0  0.22   \n2            13.635          27             0.0             0.0  0.22   \n3            14.395          10             0.0             0.0  0.24   \n4            14.395           1             0.0             0.0  0.24   \n\n   rush_hour  casual  hum_binarized  atemp_squared   atemp  ...  weekday_1  \\\n0          0       3            0.0       0.082886  0.2879  ...        0.0   \n1          0       8            0.0       0.074365  0.2727  ...        0.0   \n2          0       5            0.0       0.074365  0.2727  ...        0.0   \n3          0       3            0.0       0.082886  0.2879  ...        0.0   \n4          0       0            0.0       0.082886  0.2879  ...        0.0   \n\n   weekday_2  weekday_3  weekday_4  weekday_5  weekday_6 workingday_1  \\\n0        0.0        0.0        0.0        0.0        1.0          0.0   \n1        0.0        0.0        0.0        0.0        1.0          0.0   \n2        0.0        0.0        0.0        0.0        1.0          0.0   \n3        0.0        0.0        0.0        0.0        1.0          0.0   \n4        0.0        0.0        0.0        0.0        1.0          0.0   \n\n   weathersit_2  weathersit_3  weathersit_4  \n0           0.0           0.0           0.0  \n1           0.0           0.0           0.0  \n2           0.0           0.0           0.0  \n3           0.0           0.0           0.0  \n4           0.0           0.0           0.0  \n\n[5 rows x 73 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>aux_actual_atemp</th>\n      <th>registered</th>\n      <th>temp_binarized</th>\n      <th>temp_quantized</th>\n      <th>temp</th>\n      <th>rush_hour</th>\n      <th>casual</th>\n      <th>hum_binarized</th>\n      <th>atemp_squared</th>\n      <th>atemp</th>\n      <th>...</th>\n      <th>weekday_1</th>\n      <th>weekday_2</th>\n      <th>weekday_3</th>\n      <th>weekday_4</th>\n      <th>weekday_5</th>\n      <th>weekday_6</th>\n      <th>workingday_1</th>\n      <th>weathersit_2</th>\n      <th>weathersit_3</th>\n      <th>weathersit_4</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>14.395</td>\n      <td>13</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.24</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0.0</td>\n      <td>0.082886</td>\n      <td>0.2879</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13.635</td>\n      <td>32</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.22</td>\n      <td>0</td>\n      <td>8</td>\n      <td>0.0</td>\n      <td>0.074365</td>\n      <td>0.2727</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13.635</td>\n      <td>27</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.22</td>\n      <td>0</td>\n      <td>5</td>\n      <td>0.0</td>\n      <td>0.074365</td>\n      <td>0.2727</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>14.395</td>\n      <td>10</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.24</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0.0</td>\n      <td>0.082886</td>\n      <td>0.2879</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>14.395</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.24</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.082886</td>\n      <td>0.2879</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 73 columns</p>\n</div>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -257,18 +60,16 @@
    "execution_count": 3,
    "id": "e9437b3a78295b74",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T10:08:14.712816700Z",
-     "start_time": "2023-11-04T10:08:14.666332Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-14T20:22:53.945217600Z",
+     "start_time": "2023-11-14T20:22:53.902420800Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "((10427, 69), (3476, 69), (3476, 69))"
-      ]
+      "text/plain": "((10427, 69), (3476, 69), (3476, 69))"
      },
      "execution_count": 3,
      "metadata": {},
@@ -291,14 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('./joblib_files/y_test.plk', \"wb\") as file:\n",
+    "    pickle.dump(y_test, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:25:44.901280300Z",
+     "start_time": "2023-11-14T20:25:44.722473100Z"
+    }
+   },
+   "id": "bd44c7f2e5c30ac0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f5281c44ae6d3cd5",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T10:08:16.842216400Z",
-     "start_time": "2023-11-04T10:08:16.816624400Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-14T20:22:56.985027700Z",
+     "start_time": "2023-11-14T20:22:56.895355500Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -330,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1bd56d360ee6c1be",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-04T10:08:18.404023400Z",
-     "start_time": "2023-11-04T10:08:18.370977900Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-14T20:22:59.142076400Z",
+     "start_time": "2023-11-14T20:22:59.064768800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -488,6 +308,39 @@
    "source": [
     "joblib.dump(pred_test_linear, 'joblib_files/pred_linear_reg.plk')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "li = joblib.load('joblib_files/pred_linear_reg.plk')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:27:15.412929800Z",
+     "start_time": "2023-11-14T20:27:15.257909300Z"
+    }
+   },
+   "id": "1ccfc592eedfdb87"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "with open('./joblib_files/pred_linear_reg.plk', \"wb\") as file:\n",
+    "    pickle.dump(li, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:27:58.559717600Z",
+     "start_time": "2023-11-14T20:27:58.335691500Z"
+    }
+   },
+   "id": "7719b56ad87e15e8"
   },
   {
    "cell_type": "code",
@@ -3678,6 +3531,24 @@
    "source": [
     "joblib.dump(pred_test_rf, 'joblib_files/pred_random_forest.plk')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "li = joblib.load('joblib_files/pred_random_forest.plk')\n",
+    "with open('joblib_files/pred_random_forest.plk', \"wb\") as file:\n",
+    "    pickle.dump(li, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:29:11.629710100Z",
+     "start_time": "2023-11-14T20:29:11.304687100Z"
+    }
+   },
+   "id": "721b221e3cec2354"
   },
   {
    "cell_type": "markdown",
@@ -29418,6 +29289,24 @@
    "source": [
     "joblib.dump(pred_test_xgb, 'joblib_files/pred_xgb.plk')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "li = joblib.load('joblib_files/pred_xgb.plk')\n",
+    "with open('joblib_files/pred_xgb.plk', \"wb\") as file:\n",
+    "    pickle.dump(li, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:30:20.246634500Z",
+     "start_time": "2023-11-14T20:30:20.093071500Z"
+    }
+   },
+   "id": "fd22793f5d84379e"
   },
   {
    "cell_type": "markdown",
