--- a/model.ipynb
+++ b/model.ipynb
@@ -39316,6 +39316,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "li = joblib.load('joblib_files/pred_lightgbm.plk')\n",
+    "with open('joblib_files/pred_lightgbm.plk', \"wb\") as file:\n",
+    "    pickle.dump(li, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:32:50.729765700Z",
+     "start_time": "2023-11-14T20:32:50.577756100Z"
+    }
+   },
+   "id": "fda9384c087de947"
+  },
+  {
    "cell_type": "markdown",
    "id": "89c2acf0da868db7",
    "metadata": {
@@ -39438,19 +39456,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "a8ae051f2f6b9c5e",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T10:56:40.802700200Z",
-     "start_time": "2023-11-01T10:56:40.749391600Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-14T20:33:39.469678800Z",
+     "start_time": "2023-11-14T20:33:39.269277300Z"
+    }
    },
    "outputs": [],
    "source": [
-    "final_model = joblib.load('final_model.plk')"
+    "final_model = joblib.load('joblib_files/final_model.plk')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "with open('joblib_files/final_model.plk', \"wb\") as file:\n",
+    "    pickle.dump(final_model, file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T20:34:07.903126900Z",
+     "start_time": "2023-11-14T20:34:07.734517600Z"
+    }
+   },
+   "id": "fedb35ec498c58dd"
   },
   {
    "cell_type": "code",
